# vef

./: .gitignore  CMakeLists.txt  Makefile  README  TODO  calc_feautrier_vars.f90  calc_moments.f90  calc_rmsd.f90  calc_source_fn.f90  calc_vefs.f90  formal_soln.f90  gauleg.f90  global.f90  interfaces.f90  locate.f90  main.cc  main.f90  planck_fn.f90  plot.py  precision_mod.f90  solve_rte.f90  solve_scatt_prob.f90  stop_exit.f90  twerp.f90  write_moments.f90  write_source_fn.f90  write_vefs.f90
src/: CMakeLists.txt  calc_0th_moment_J.f90  calc_2nd_moment_K.f90  calc_flux.f90  calc_moments.f90  calc_rmsd.f90  calc_source_fn.f90  calc_vefs.f90  collisional_rates.f90  const.f90  gauleg.f90  global.f90  grid_funcs.f90  interfaces.f90  line_profiles.f90  main.f90  opacity.f90  planck_fn.f90  precision_mod.f90  radiative_rates.f90  solve_rte.f90  solve_scatt_prob.f90  solve_statistical_equations.f90  stop_exit.f90  write_moments.f90  write_source_fn.f90  write_spectrum.f90  write_vefs.f90
src/saha-boltzmann/: CMakeLists.txt  atomicdata.f90  f_ij.f90  machine.f90  part_func.f90  saha.f90
src/saha_boltzmann/: CMakeLists.txt  Doxyfile  atomicdata.f90  f_ij.f90  fill_atomic_data.f90  globalvars.f90  interfaces.f90  main.f90  part_func.f90  saha.f90  solvene.f90  zeroin.f
